registry/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: registry
    spec:
      containers:
      - resources:
        name: registry
        image: registry:2
        ports:
        - name: registry-port
          containerPort: 5000
        volumeMounts:
        - mountPath: /var/lib/registry
          name: images
        - mountPath: /auth
          name: auth
      volumes:
      - name: images
        hostPath:
          path: /home/vagrant/registry/images
      - name: auth
        hostPath:
          path: /home/vagrant/registry/auth
