registry/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-clusterip
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    name: registry
